--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;500;600;700;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -23,6 +25,9 @@
     }
     .fluid-pr {
         font-size: clamp(1rem, 0.7333rem + 0.6667vi, 1.25rem) !important;
+    }
+    .fluid-secondary {
+        font-size: clamp(0.875rem, 0.788rem + 0.4348vi, 1.125rem) !important;
     }
     /* .backDropBlurMenu::after {
         content: '';
